Internal state:
* history data (constructor)
* report FSM

Input signals:
* port-up (switch)
* port-down (switch)
* online (switch)
* offline (switch)
* poll-discovery (poll)
* poll-fail (poll)
* round-trip-status
* region-offline (switch)

Output signals:
* physical-down (isl/2)
* uni-isl-setup (isl/2)
* discovery (isl/2)
* fail (isl/2)
* isl-round-trip

@startuml
title Port FSM

[*] -right-> INIT

INIT -r-> UNOPERATIONAL : offline
INIT -r-> OPERATIONAL : online
INIT : enter / emit uni-isl-setup

state OPERATIONAL {
    [*] --> UNKNOWN

    UNKNOWN --> DOWN : port-down
    UNKNOWN --> UP : port-up

    DOWN --> UP : port-up
    DOWN : enter / emit port-down into report
    DOWN : enter / emit physical-down
    DOWN : enter / emit delWatch
    DOWN : poll-fail / emit fail

    UP --> DOWN : port-down
    UP --> UP_DISABLED : disable-discovery
    UP : enter / emit port-up into report
    UP : enter[discovery-enabled] / issue addWatch
    UP : poll-discovery / emit discovery
    UP : poll-fail / emit fail
    UP : round-trip-status / emit round-trip-status
    UP : enable-discovery / issue addWatch

    UP_DISABLED --> DOWN : port-down
    UP_DISABLED --> UP : enable-discovery
    UP_DISABLED : enter / issue delWatch
    UP_DISABLED : enter / issue notifyUniIslFail
}

OPERATIONAL --> UNOPERATIONAL : offline
OPERATIONAL -r-> FINISH : port-del
OPERATIONAL --> REGION_MISSING : region-offline

UNOPERATIONAL --> OPERATIONAL : online
UNOPERATIONAL --> FINISH : port-del
UNOPERATIONAL : poll-fail / emit fail
UNOPERATIONAL : round-trip-status / emit round-trip-status

REGION_MISSING : enter / emit delWatch
REGION_MISSING --> OPERATIONAL : online
REGION_MISSING -r-> FINISH : port-del

FINISH: enter / emit uni-isl-del
FINISH: enter / emit delWatch
FINISH -> [*]

@enduml
